# Kirino-elementary

./: .gitignore  AUTHORS  CMakeLists.txt
data/: kirino.desktop
src/: assistant.vala  chatbot.vala  context.vala  correction.vala  dialog.vala  event.vala  kirino.vala  knowledge.vala  memory.vala  person.vala  text.vala  user.vala
